--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
                 <p>Segundos</p>
             </div>
     </div>
-    <script src="/Testes/teste2/assets/js/index.js"></script>
+    <script src="./assets/js/index.js"></script>
 </body>
 </html>
